test/app/invalid-plugin-trigger-methods/config/sandbox.js
module.exports = {
  application: {
    "host": "0.0.0.0",
    "port": 17790,
    "verbose": true
  },
  plugins: {
    "pluginInvalidTriggerMethods": {
      "host": "0.0.0.0",
      "port": 17792,
      "verbose": true
    }
  }
}